<package format="2">
  <name>four_wheel_steering_msgs</name>
  <version>1.1.1</version>
  <description>
    ROS messages for robots using FourWheelSteering.
  </description>
  <maintainer email="vincentrou@gmail.com">Vincent Rousseau</maintainer>
  <author email="vincentrou@gmail.com">Vincent Rousseau</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/four_wheel_steering_msgs</url>
  <url type="repository">https://github.com/ros-drivers/four_wheel_steering_msgs.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/four_wheel_steering_msgs/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  
  <export>
    <architecture_independent/>
  </export>
</package>
